package br.unitins.hello.model;

public enum PagamentoTipo {
    CARTAO,
    BOLETO,
    PIX
}
