package br.unitins.hello.model;

public enum TamanhoTipo {
    PEQUENO,
    MEDIO,
    GRANDE
}
