@startuml CadernosInteligentes

    class Produto {
        - String descricao
        - Double  precoUnidade
        - TamanhoTipo tamanhoProduto
        - String  imagemProduto
        - Integer quantidade
    }

    enum TamanhoTipo {
        M
        G
        P
    }

    enum PerfilTipo {
        CLIENTE
        ADMIN
    }

    class User {
        - String nomeCompleto
        - String cpf
        - String telefone
        - String email
        - String senha
        - Endereco enderecoUser
        - PerfilTipo perfilUser
    }

    class Endereco{
        - String endereco
        - String complemento
        - Integer numero
        - String Cep
        - Cidade cidadeEndereco
    }

    class Cidade{
        - String nomeCidade
        - Estado estadoCidade
    }

    class Estado{
        - String nomeEstadoCompleto
        - String abreviado
    }


    class Pagamento{
        - PagamentoTipo PagamentoTipo
        - Cartao cartaoPagamento
        - String statusPagamento
    }

    class Cartao{
        - String titularCartao
        - Double numeroCartao
        - Tipocartao tipoCartao
    }

    enum CartaoTipo{
        DEBITO
        CREDITO
    }

    enum PagamentoTipo{
        BOLETO
        PIX
        CARTAO
    }

    class Compra{
        - Date dataCompra
        - List<ProdutoCompra> produto
        - Pagamento pagamentoCompra
    }

    class ProdutoCompra{
        - Produto produtoCompra
        - Integer quantidade
    }

    Produto "1" <--- "1" TamanhoTipo
    ProdutoCompra "1" <---* "1 ... *" Compra
    Produto "1" <---* "1 ... *" ProdutoCompra
    User "1  " <--- "  1" PerfilTipo
    User <|---  Endereco
    User "1" *---> "1...*" Compra
    Endereco <|---  Cidade
    Cidade " 1...* " o---> "1" Estado
    Cartao "1" <--- "1" CartaoTipo
    Compra "1" o---> "1" Pagamento
    Pagamento <--- PagamentoTipo
    Pagamento <--- Cartao


@endstartuml